opam-version: "2.0"
maintainer: "stephanos.tsoucas@gmail.com"
authors: ["Stephanos Tsoucas"]
license: "Apache-2.0"
synopsis: "Bson format encoding/decoding for Ocaml"
homepage: "https://github.com/nosman/Bson"
version: "0.0.2"
bug-reports: "https://github.com/nosman/Bson/issues"
dev-repo: "git+https://github.com/nosman/Bson.git"
build: [
  [ "dune" "build" "-p" name "-j" jobs ]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "ocaml" {>= "4.04"}
  "ounit" {with-test}
  "dune" {build}
  "core"
]
